--- a/pay/src/index.css
+++ b/pay/src/index.css
@@ -93,6 +93,8 @@
 body {
     margin: 0;
     padding: 0;
+    background: #211F22;
+    overflow: hidden;
 }
 
 * {
